infrastructures/manifests/echo-server/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server
  namespace: echo-server
spec:
  ingressClassName: "nginx"
  rules:
  - host: echo.cuterabbit.art
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: echo-server
            port:
              number: 80
  tls:
    - hosts:
        - echo.cuterabbit.art
